--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="./favicon.ico">
@@ -7,8 +7,8 @@
     <title>Jan Accensi March - Mathematics & Computer Science Student</title>
     <meta name="description" content="Portfolio of Jan Accensi March, Mathematics and Computer Science student at University of Barcelona">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script type="module" crossorigin src="./assets/index.U2eokCS-.js"></script>
-    <link rel="stylesheet" crossorigin href="./assets/index.Duo0k_i7.css">
+    <script type="module" crossorigin src="./assets/index.4-kdSCnm.js"></script>
+    <link rel="stylesheet" crossorigin href="./assets/index.BY5sxtEn.css">
   </head>
   <body>
     <div id="app"></div>
